[package]
name = "samuraiwm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xcb = {version= "1.1.1", features = ["xlib_xcb"]}
anyhow = "1.0"
x11 = "2.18"
# xcb-util = { version = "0.4", features = ["ewmh", "icccm", "keysyms"] }
